dhall/tests/type-inference/failure/unit/RightBiasedRecordMergeMixedKinds3.txt
Type error: error: InvalidFieldType
 --> <current file>:1:21
  |
1 | { x = {=} } ⫽ { x = Kind }
  |                     ^^^^ InvalidFieldType
  |
